2009-10-23  Tobias C. Rittweiler <tcr@freebits.de>

	Restarts in SLDB are now numbered reversely. The rationale is that
	always-existing restarts are likely to be associated with the same
	number now.

	* slime.el (sldb-insert-restarts): Number restart reversely.
	(sldb-restart-number-for-swank): New; recompute the unreversed
	number for the swank side.
	(sldb-restart-number-at-point): Previously `sldb-restart-at-point'.
	(sldb-invoke-restart): Adapted accordingly.

2009-10-23  Tobias C. Rittweiler <tcr@freebits.de>

	When ever Slime seems to get stuck (e.g. after some character
	encoding confusion), `M-x slime-reset' should hopefully bring it
	into a functional state again.

	* slime.el (slime-reset): Erase connection buffer.

2009-10-21  Tobias C. Rittweiler <tcr@freebits.de>

	Make M-x slime-changelog-date work.

	* slime.el (slime-changelog-date): Make the function be callable
	interactively.

2009-10-21  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (ASDF): Document new commands.

2009-10-20  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp (call-without-interrupts): Discourage use.
	(interesting-frame-p): Never show open frame bogons.

2009-10-19  Stas Boukarev  <stassats@gmail.com>

	* swank-sbcl.lisp (thread-description): Remove it and supporting code,
	because it didn't really work.

	* swank.lisp (with-thread-description): Remove unused macro.

	* slime.el (slime-list-threads): Update information before
	setting the mode, otherwise it messes up current connection.

	* doc/slime.texi: fix typo.

2009-10-19  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (without-printing-errors): New macro.
	(to-string): Use it.
	(to-line): Use it, too. This fixes printing error occuring during
	inspecting to prevent the inspector from displaying something
	useful.

	Reported by xristos@suspicious.org.

2009-10-15  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-current-package): Move REPL stuff to contrib.
